[gd_scene load_steps=5 format=2]

[ext_resource path="res://nodescenes/PlayerPuppet.gd" type="Script" id=1]
[ext_resource path="res://HandScript.gd" type="Script" id=2]
[ext_resource path="res://guimeshes/headmesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://guimeshes/headtorchmesh.tscn" type="PackedScene" id=6]

[node name="PlayerPuppet" type="Spatial"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, -8 )
script = ExtResource( 1 )

[node name="HeadCam" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.691634, 0 )

[node name="csgheadmesh" parent="HeadCam" instance=ExtResource( 3 )]

[node name="headtorch" parent="HeadCam" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0.24, 0 )

[node name="HandLeft" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.149729, 0.251003, 0 )
script = ExtResource( 2 )

[node name="HandRight" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.187223, 0, 0 )
script = ExtResource( 2 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="HandRight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.336952, 0.251003, 0 )
